--- a/gb/25/11/6/n14630620.md
+++ b/gb/25/11/6/n14630620.md
@@ -33,12 +33,12 @@
 <p>学界分析指出，这类激励政策表面提升了登记数量，实则掩盖了婚姻结构老化与年轻人婚育意愿下降的现实。专家认为，若缺乏持续性的社会支持体系，地方财政补贴终将难以维系，“刺激性婚姻热潮”也将随之冷却。◇</p>
 <p>责任编辑：林琮文#</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/5/15/n14510029.md#1">“不结婚不生小孩” 中国年轻人无声抵抗</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541180.md#1">上海干婚现象向全国蔓延 高压社会中的无奈</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/31/n14564089.md#1">中国2024年结婚登记610.6万对 创45年最低</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/22/n14578803.md#1">计划生育遗害 中国农村光棍掀跨国婚姻热潮</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/16/n14414940.md#1">农民工讨薪 厦门象屿集团动用高压水枪驱逐</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/6/n14568122.md#1">四川江油校园霸凌引发大规模抗议 海外声援</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/7/n14569378.md#1">【纪元焦点】白纸运动未远 江油抗争已起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/1/n14627448.md#1">海南国企偷砍农户槟榔树 引发警民冲突</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/11/9/n9823637.md#1" target="_blank">苦胆：“十月革命一声炮响”放的是空炮</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/14/4/15/n4132079.md#1" target="_blank">从唐山义女“探父蒙难”看古今对比</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/4/7/n10284443.md#1" target="_blank">林辉：受蒋介石赞赏的“苗王”被逼自杀背后</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/11/27/n8533466.md#1" target="_blank">一位医生太太见证医学无法达到的奇迹</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
